add cloudinary for upload 🚀

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,15 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
-GITHUB_TOKEN=
-DATABASE_URL=
+
+GITHUB_TOKEN=tobemodified
+DATABASE_URL=tobemodified
+
+SMTP_HOST=tobemodified
+SMTP_PORT=tobemodified
+SMTP_USERNAME=tobemodified
+SMTP_PASSWORD=tobemodified
+
+CLOUDINARY_NAME=tobemodified
+CLOUDINARY_KEY=tobemodified
+CLOUDINARY_SECRET=tobemodified
