--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-i18n": "4.3.8",
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/provider-email-nodemailer": "^4.3.8",
+    "@strapi/provider-upload-cloudinary": "^4.3.8",
     "@strapi/strapi": "4.3.8",
     "axios": "^0.27.2",
     "better-sqlite3": "7.4.6",
